err/latex2dnd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/latex2dnd'...
Compiling './lib/python3.5/site-packages/latex2dnd/dndspec.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/dndspec.py", line 60
    print "          [%s] Mapping label '%s' [%s] to variable '%s', math exp '%s' (%s)" % (index, tex, draggable_label,
                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/latex2dnd/formula.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/formula.py", line 49
    print "---------- Running %d DD formula unit tests ----------" % len(self.unit_tests)
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/latex2dnd/lib'...
Compiling './lib/python3.5/site-packages/latex2dnd/main.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/main.py", line 61
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/latex2dnd/test'...
Compiling './lib/python3.5/site-packages/latex2dnd/test/test_cfn.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/test/test_cfn.py", line 25
    print "="*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/latex2dnd/test/test_dndspec.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/test/test_dndspec.py", line 25
    print "="*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/latex2dnd/test/test_errors.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/test/test_errors.py", line 25
    print "="*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/latex2dnd/test/test_examples.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/test/test_examples.py", line 25
    print "="*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/latex2dnd/test/test_gravity.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/test/test_gravity.py", line 25
    print "="*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/latex2dnd/test/test_gravity2.py'...
***   File "./lib/python3.5/site-packages/latex2dnd/test/test_gravity2.py", line 25
    print "="*70
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/latex2dnd/testtex'...
Listing './lib/python3.5/site-packages/latex2dnd/tex'...
Listing './lib/python3.5/site-packages/latex2dnd-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/path.py-10.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
